--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@types/express-session": "^1.18.2",
         "bcrypt": "^5.1.0",
+        "bcryptjs": "^3.0.3",
         "connect-redis": "^9.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
@@ -35,6 +36,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.1",
