--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@socket.io/redis-adapter": "^8.3.0",
         "@types/express-session": "^1.18.2",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^3.0.3",
+        "bullmq": "^5.66.2",
         "connect-redis": "^9.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
