--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node dist/server.js",
         "dev": "nodemon src/server.ts",
         "build": "tsc",
-        "db:reset": "node reset-and-seed.js"
+        "db:reset": "node reset-and-seed.js",
+        "db:migrate": "node scripts/migrate.js"
     },
     "keywords": [],
     "author": "",
