--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "socket.io": "^4.6.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
-        "uuid": "^13.0.0",
+        "uuid": "^9.0.1",
         "zod": "^4.2.0"
     },
     "devDependencies": {
@@ -51,6 +51,7 @@
         "@types/pg": "^8.6.6",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.8",
+        "@types/uuid": "^10.0.0",
         "nodemon": "^2.0.22",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
