feat(tracking): Premium LeafletMap with WebView - Free, stable, no API key
- Replace react-native-maps with WebView + Leaflet/OpenStreetMap
- Add LeafletMap component with premium Carto dark theme
- Animated driver marker with heading rotation and pulse effect
- Customer beacon marker with ripple animation
- Dashed route line between driver and customer
- Bottom sheet starts collapsed (80px peek) - full map visible
- Draggable to 40% (details) or 75% (full details)
- 100% free, no Google Maps API key required
- Crash-proof on standalone APK builds

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -112,7 +112,8 @@
             "targetSdkVersion": 34,
             "minSdkVersion": 24,
             "buildToolsVersion": "34.0.0",
-            "kotlinVersion": "2.0.21"
+            "kotlinVersion": "2.0.21",
+            "usesCleartextTraffic": true
           },
           "ios": {
             "deploymentTarget": "15.1",
