--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,6 +39,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-webview": "^13.16.0",
     "socket.io-client": "4"
   },
   "devDependencies": {
