Enhanced Tracking Module: QC gate, light map, 4-step timeline, chat notifications, premium UI. Updated app icon background.

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -53,7 +53,7 @@
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#1a1a2e"
+        "backgroundColor": "#F3F4F6"
       },
       "permissions": [
         "android.permission.CAMERA",
