feat(core): implement robust image optimization & project health methods - Added 'sharp' for WebP compression and resizing (1200px limit) - Updated Request, Showcase, Bid, Dispute routes to use optimization - Configured OCR route to use raw temp file storage - Fixed .gitignore: track package-lock.json for reproducible builds - Fixed .dockerignore for faster build context - Audit: Project structure and security verified

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,3 +5,11 @@ uploads
 backend_debug.log
 server.log
 debug_log.txt
+
+# Exclude large projects not needed for backend
+mobile/
+driver-mobile/
+*.apk
+docs/
+dist/
+coverage/
