--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@socket.io/redis-adapter": "^8.3.0",
         "@types/express-session": "^1.18.2",
+        "@types/sharp": "^0.31.1",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^3.0.3",
         "bullmq": "^5.66.2",
@@ -34,6 +35,7 @@
         "puppeteer": "^24.33.0",
         "qrcode": "^1.5.4",
         "redis": "^5.10.0",
+        "sharp": "^0.34.5",
         "socket.io": "^4.6.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
