--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "expo": "~54.0.30",
+    "expo-build-properties": "^1.0.10",
     "expo-camera": "~17.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
