--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -24,6 +24,7 @@
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.15",
     "expo-secure-store": "~15.0.8",
+    "expo-speech": "^14.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
     "react": "19.1.0",
