fix: Add /catalog route alias and fix mobile CATALOG_SEARCH endpoint
- Added /catalog alias in v1.routes.ts pointing to showcase routes for mobile compatibility
- Updated mobile/src/config/api.ts CATALOG_SEARCH to use /showcase/parts (correct endpoint)
- Fixed /delivery/zones test expectation (correctly requires auth)

--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -7,8 +7,8 @@
         "base": {
             "node": "20.19.4",
             "env": {
-                "EXPO_PUBLIC_API_URL": "https://api.qscrap.qa",
-                "EXPO_PUBLIC_SOCKET_URL": "https://api.qscrap.qa"
+                "EXPO_PUBLIC_API_URL": "https://qscrap.qa/api",
+                "EXPO_PUBLIC_SOCKET_URL": "https://qscrap.qa"
             }
         },
         "development": {
@@ -49,8 +49,8 @@
             "autoIncrement": true,
             "channel": "production",
             "env": {
-                "EXPO_PUBLIC_API_URL": "https://api.qscrap.qa/api",
-                "EXPO_PUBLIC_SOCKET_URL": "https://api.qscrap.qa"
+                "EXPO_PUBLIC_API_URL": "https://qscrap.qa/api",
+                "EXPO_PUBLIC_SOCKET_URL": "https://qscrap.qa"
             },
             "android": {
                 "buildType": "app-bundle",
