feat(notifications): Enterprise notification system audit - 28 persistent notifications across all entities
Phase 1: Garage Dashboard
- negotiation.controller.ts: 9 counter-offer notifications
- cancellation.controller.ts: 4 cancellation notifications

Phase 2: Operations/Admin
- support.controller.ts: 3 ticket/reply notifications
- operations.controller.ts: 2 dispute resolution notifications

Phase 3: Customer Mobile
- delivery.controller.ts: 6 delivery tracking notifications

Phase 4: Driver Mobile
- delivery.controller.ts: 2 assignment notifications
- notification.service.ts: Added driver target_role support

Phase 5: Frontend UI
- garage-dashboard.js: 21 notification type icons

All entities covered: Garage, Customer, Driver, Operations

--- a/driver-mobile/android/app/build.gradle
+++ b/driver-mobile/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.qscrap.driver'
+    namespace 'com.qscrapdriver'
     defaultConfig {
         applicationId 'com.qscrap.driver'
         minSdkVersion rootProject.ext.minSdkVersion
