--- a/driver-mobile/android/app/build.gradle
+++ b/driver-mobile/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.qscrapdriver'
+    namespace 'com.qscrap.driver'
     defaultConfig {
         applicationId 'com.qscrap.driver'
         minSdkVersion rootProject.ext.minSdkVersion
