--- a/driver-mobile/ios/QScrapDriver/Info.plist
+++ b/driver-mobile/ios/QScrapDriver/Info.plist
@@ -64,6 +64,7 @@
     <array>
       <string>location</string>
       <string>fetch</string>
+      <string>remote-notification</string>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
