--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.30",
     "expo-build-properties": "^1.0.10",
     "expo-camera": "~17.0.10",
+    "expo-device": "~8.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
