--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -20,6 +20,7 @@
     "expo-build-properties": "^1.0.10",
     "expo-camera": "~17.0.10",
     "expo-device": "~8.0.10",
+    "expo-file-system": "^19.0.21",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
@@ -31,11 +32,17 @@
     "expo-task-manager": "~14.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-mmkv": "^4.1.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "socket.io-client": "4"
+    "react-native-signature-canvas": "^5.0.2",
+    "react-native-svg": "^15.15.1",
+    "react-native-webview": "^13.16.0",
+    "socket.io-client": "4",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
