chore: cleanup unused scripts and update deployment tools
- Removed obsolete debugging and migration scripts
- Updated sync_vps.py to include database migration
- Added deploy_auto.py for automated VPS deployment
- Cleaned up mobile app files

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -68,6 +68,11 @@
         "android.permission.POST_NOTIFICATIONS"
       ],
       "useNextNotificationsApi": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAnmV1A16XEgQ6-_WwTpbVvKhoJZjor1Gs"
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
