--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@maplibre/maplibre-react-native": "^10.4.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.9.0",
@@ -34,6 +33,7 @@
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "^1.26.20",
     "react-native-mmkv": "^4.1.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
