--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "expo": "~54.0.30",
+    "expo-av": "~16.0.8",
     "expo-build-properties": "^1.0.10",
     "expo-camera": "~17.0.10",
     "expo-device": "~8.0.10",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native-maps": "^0.24.2",
     "babel-preset-expo": "^54.0.9",
     "typescript": "~5.9.2"
   },
