fix(driver): local-first auth pattern - no network call on startup
Matches Customer App behavior:
- On startup, read cached driver from SecureStore (instant)
- Profile refresh happens 1s AFTER UI loads (background)
- Prevents app hang when domain/SSL is slow

Root cause: checkAuth() was calling api.getProfile() synchronously,
which blocked the splash screen if HTTPS had issues.

--- a/driver-mobile/app.json
+++ b/driver-mobile/app.json
@@ -39,7 +39,7 @@
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#8D1B3D"
             },
-            "package": "com.qscrap.driver",
+            "package": "com.qscrapdriver",
             "permissions": [
                 "INTERNET",
                 "ACCESS_NETWORK_STATE",
@@ -93,9 +93,7 @@
                         "minSdkVersion": 24,
                         "buildToolsVersion": "35.0.0",
                         "kotlinVersion": "2.1.20",
-                        "usesCleartextTraffic": true,
-                        "namespace": "com.qscrap.driver",
-                        "applicationId": "com.qscrap.driver"
+                        "usesCleartextTraffic": true
                     }
                 }
             ]
