fix: multer config for vehicle photos (car_front_image, car_rear_image)

--- a/driver-mobile/app.json
+++ b/driver-mobile/app.json
@@ -1,8 +1,13 @@
 {
     "expo": {
         "name": "QScrap Driver",
-        "slug": "qscrap-driver",
+        "slug": "qscrap",
         "version": "1.1.0",
+        "extra": {
+            "eas": {
+                "projectId": "47b26c9d-3bd0-4470-8543-dd303a49b287"
+            }
+        },
         "orientation": "portrait",
         "icon": "./assets/icon.png",
         "userInterfaceStyle": "light",
@@ -97,11 +102,6 @@
                     }
                 }
             ]
-        ],
-        "extra": {
-            "eas": {
-                "projectId": "47b26c9d-3bd0-4470-8543-dd303a49b287"
-            }
-        }
+        ]
     }
 }
