--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -49,6 +49,7 @@
     "@types/react": "~19.1.0",
     "@types/react-native-maps": "^0.24.2",
     "babel-preset-expo": "^54.0.9",
+    "eas-cli": "^16.28.0",
     "typescript": "~5.9.2"
   },
   "private": true
