Dashboard Enhancements: Finance, Support, Insurance API
- Finance Dashboard (HTML + JS): Payout management, 2-way confirmation
- Support Dashboard (HTML + JS): Tickets, disputes, review moderation
- Operations Dashboard: Added Return Assignments panel
- Insurance API: Gap-filling endpoints (parts-search, price-compare, tracking)
- Support Routes: Added /stats, /urgent, /activity endpoints
- Multiple service layer extractions complete

--- a/.env.example
+++ b/.env.example
@@ -46,5 +46,22 @@ OCR_SPACE_API_KEY=
 # REDIS_URL=redis://localhost:6379
 
 # Database Replica (for read scaling)
-# DB_REPLICA_HOST=
-# DB_REPLICA_PORT=5432
+# DB_READ_REPLICA_HOST=
+# DB_READ_REPLICA_PORT=5432
+
+# ===========================================
+# PRODUCTION SCALING (1M+ Users)
+# ===========================================
+
+# Database Connection Pool
+DB_POOL_MAX=50          # Increase to 100 for high traffic
+DB_POOL_MIN=5           # Keep warm connections
+DB_IDLE_TIMEOUT=30000   # Close idle after 30s
+DB_CONNECT_TIMEOUT=5000 # Connection timeout 5s
+DB_STATEMENT_TIMEOUT=30000  # Query timeout 30s
+
+# Read Replica Pool (for dashboard/reports)
+DB_READ_POOL_MAX=30
+
+# SSL for cloud databases
+DB_SSL=false            # Set to 'true' for AWS/Azure/GCP
