--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
         "handlebars": "^4.7.8",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.0",
+        "kysely": "^0.28.9",
         "multer": "^1.4.5-lts.1",
         "node-fetch": "^2.7.0",
-        "pg": "^8.10.0",
+        "pg": "^8.17.1",
         "puppeteer": "^24.33.0",
         "qrcode": "^1.5.4",
         "redis": "^5.10.0",
