--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@sentry/node": "^10.34.0",
         "@socket.io/redis-adapter": "^8.3.0",
         "@types/express-session": "^1.18.2",
         "@types/sharp": "^0.31.1",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^3.0.3",
         "bullmq": "^5.66.2",
+        "compression": "^1.8.1",
         "connect-redis": "^9.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-rate-limit": "^8.2.1",
         "express-session": "^1.18.2",
+        "express-validator": "^7.3.1",
         "handlebars": "^4.7.8",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.0",
@@ -48,14 +51,19 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/multer": "^1.4.7",
         "@types/node": "^18.15.11",
         "@types/pg": "^8.6.6",
+        "@types/supertest": "^6.0.3",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^10.0.0",
+        "jest": "^30.2.0",
         "nodemon": "^3.1.11",
+        "supertest": "^7.2.2",
+        "ts-jest": "^29.4.6",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
     }
