--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "start": "node dist/server.js",
         "dev": "nodemon src/server.ts",
         "build": "tsc",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
         "db:reset": "node reset-and-seed.js",
         "db:migrate": "node scripts/migrate.js"
     },
