--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,9 @@
 {
     "preset": "ts-jest",
     "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+        "<rootDir>/src/jest.setup.ts"
+    ],
     "roots": [
         "<rootDir>/src"
     ],
