--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@sentry/node": "^10.34.0",
         "@socket.io/redis-adapter": "^8.3.0",
         "@types/express-session": "^1.18.2",
+        "@types/node-cron": "^3.0.11",
         "@types/sharp": "^0.31.1",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^3.0.3",
@@ -37,6 +38,7 @@
         "jsonwebtoken": "^9.0.0",
         "kysely": "^0.28.9",
         "multer": "^1.4.5-lts.1",
+        "node-cron": "^4.2.1",
         "node-fetch": "^2.7.0",
         "pg": "^8.17.1",
         "puppeteer": "^24.33.0",
