--- a/package.json
+++ b/package.json
@@ -1,75 +1,77 @@
 {
-    "name": "qscrap-backend",
-    "version": "1.0.0",
-    "description": "QScrap Backend API",
-    "main": "dist/server.js",
-    "scripts": {
-        "start": "node dist/server.js",
-        "dev": "nodemon src/server.ts",
-        "build": "tsc",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
-        "db:reset": "node reset-and-seed.js",
-        "db:migrate": "node scripts/migrate.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@sentry/node": "^10.34.0",
-        "@socket.io/redis-adapter": "^8.3.0",
-        "@types/express-session": "^1.18.2",
-        "@types/node-cron": "^3.0.11",
-        "@types/sharp": "^0.31.1",
-        "bcrypt": "^5.1.0",
-        "bcryptjs": "^3.0.3",
-        "bullmq": "^5.66.2",
-        "compression": "^1.8.1",
-        "connect-redis": "^9.0.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "express-rate-limit": "^8.2.1",
-        "express-session": "^1.18.2",
-        "express-validator": "^7.3.1",
-        "handlebars": "^4.7.8",
-        "helmet": "^8.1.0",
-        "jsonwebtoken": "^9.0.0",
-        "kysely": "^0.28.9",
-        "multer": "^1.4.5-lts.1",
-        "node-cron": "^4.2.1",
-        "node-fetch": "^2.7.0",
-        "pg": "^8.17.1",
-        "puppeteer": "^24.33.0",
-        "qrcode": "^1.5.4",
-        "redis": "^5.10.0",
-        "sharp": "^0.34.5",
-        "socket.io": "^4.6.1",
-        "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1",
-        "uuid": "^9.0.1",
-        "zod": "^4.2.0"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/bcryptjs": "^2.4.6",
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
-        "@types/jest": "^30.0.0",
-        "@types/jsonwebtoken": "^9.0.1",
-        "@types/multer": "^1.4.7",
-        "@types/node": "^18.15.11",
-        "@types/pg": "^8.6.6",
-        "@types/supertest": "^6.0.3",
-        "@types/swagger-jsdoc": "^6.0.4",
-        "@types/swagger-ui-express": "^4.1.8",
-        "@types/uuid": "^10.0.0",
-        "jest": "^30.2.0",
-        "nodemon": "^3.1.11",
-        "supertest": "^7.2.2",
-        "ts-jest": "^29.4.6",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.0.4"
-    }
+  "name": "qscrap-backend",
+  "version": "1.0.0",
+  "description": "QScrap Backend API",
+  "main": "dist/server.js",
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "db:reset": "node reset-and-seed.js",
+    "db:migrate": "node scripts/migrate.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@sentry/node": "^10.34.0",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@types/express-session": "^1.18.2",
+    "@types/node-cron": "^3.0.11",
+    "@types/sharp": "^0.31.1",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.3",
+    "bullmq": "^5.66.2",
+    "compression": "^1.8.1",
+    "connect-redis": "^9.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "expo": "^54.0.31",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "express-session": "^1.18.2",
+    "express-validator": "^7.3.1",
+    "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "kysely": "^0.28.9",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^2.7.0",
+    "pg": "^8.17.1",
+    "puppeteer": "^24.33.0",
+    "qrcode": "^1.5.4",
+    "redis": "^5.10.0",
+    "sharp": "^0.34.5",
+    "socket.io": "^4.6.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^9.0.1",
+    "zod": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.15.11",
+    "@types/pg": "^8.6.6",
+    "@types/react": "~19.1.10",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
