fix: Arabic RTL support + translation keys + driver payment API
- Added comprehensive Arabic/English translations for condition.*, offers.*, alerts.*, order.*, common.*, requests.* keys
- Fixed VIN scanner removed (manual entry only)
- Added RTL utility functions for Arabic layout support
- Added getOrderDetails to driver API for payment collection screen
- Fixed duplicate translation keys
- All screens now properly support Arabic RTL layout

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -121,7 +121,8 @@
             "useFrameworks": "static"
           }
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "extra": {
       "privacyPolicyUrl": "https://qscrap.qa/privacy",
