Fix: Add uploads volume mount to persist uploaded files in container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - DB_NAME=${DB_NAME:-qscrap_db}
       - JWT_SECRET=${JWT_SECRET:?JWT_SECRET is required}
       - OCR_SPACE_API_KEY=${OCR_SPACE_API_KEY:-}
+    volumes:
+      - ./uploads:/app/uploads
     depends_on:
       - postgres
     command: npm run start
