--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "redis": "^5.10.0",
     "sharp": "^0.34.5",
     "socket.io": "^4.6.1",
+    "stripe": "^20.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
