--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -24,6 +24,7 @@
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-local-authentication": "~17.0.8",
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.15",
     "expo-secure-store": "~15.0.8",
