--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/express-session": "^1.18.2",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.5",
     "@types/sharp": "^0.31.1",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^3.0.3",
@@ -40,6 +41,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.12",
     "pg": "^8.17.1",
     "puppeteer": "^24.33.0",
     "qrcode": "^1.5.4",
