--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "@stripe/stripe-react-native": "0.50.3",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
     "expo-build-properties": "~1.0.10",
