feat: VVIP 2026 - Dark Mode + Inter Font + Accessibility
- Add dark mode with system preference support and persistence
- Add Inter font family from Google Fonts
- Add Appearance section in Settings with Light/Dark/System options
- Add accessibility labels to HomeScreen touch targets
- Fix support phone number per QSCRAP_BRAIN.md
- Add WelcomeNewUser component for empty state
- Fix pre-existing TypeScript errors (toast, navigation)
- Add EN/AR translations for new features

Brain Compliant: Uses #8D1B3D + #C9A227, no new APIs/tables

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -129,7 +129,8 @@
           "merchantIdentifier": "merchant.qa.qscrap.app",
           "enableGooglePay": true
         }
-      ]
+      ],
+      "expo-font"
     ],
     "extra": {
       "privacyPolicyUrl": "https://qscrap.qa/privacy",
