fix: remove QC statuses from garage dashboard, add api.qscrap.qa subdomain support, fix translation keys
- Garage Dashboard: Removed QC status handlers (qc_in_progress, qc_passed, qc_failed)
- Garage Dashboard: 'collected' status now shows 'Picked Up by Driver' with truck icon
- Mobile Apps: Updated API URL to use api.qscrap.qa subdomain
- Mobile Apps: Added 15s network timeout for reliability
- Mobile Apps: Added missing translation keys (cancel.feePreparing, cancel.feeConfirmed)
- Driver App: Fixed AndroidManifest GOOGLE_MAPS_API_KEY placeholder
- Added various utilities for logging, circuit breaker, fatigue monitoring

--- a/driver-mobile/android/gradle.properties
+++ b/driver-mobile/android/gradle.properties
@@ -69,3 +69,6 @@ android.compileSdkVersion=35
 android.targetSdkVersion=35
 android.buildToolsVersion=35.0.0
 android.kotlinVersion=2.1.20
+# Google Maps
+GOOGLE_MAPS_API_KEY=AIzaSyBtetLMBqtW1TNNsBFWi5Xa4LTy1GEbwYw
+newArchEnabled=true
