--- a/driver-mobile/android/app/build.gradle
+++ b/driver-mobile/android/app/build.gradle
@@ -95,6 +95,10 @@ android {
         versionCode 1
         versionName "1.2.3"
 
+        manifestPlaceholders = [
+            GOOGLE_MAPS_API_KEY: project.findProperty('GOOGLE_MAPS_API_KEY') ?: ''
+        ]
+
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
     signingConfigs {
