--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -31,6 +31,7 @@
     "expo-speech": "^14.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
+    "expo-updates": "~29.0.16",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
@@ -50,7 +51,7 @@
     "@types/react": "~19.1.0",
     "@types/react-native-maps": "^0.24.2",
     "babel-preset-expo": "^54.0.9",
-    "eas-cli": "^16.28.0",
+    "eas-cli": "^16.31.0",
     "typescript": "~5.9.2"
   },
   "private": true
