fix: use actual Google Maps API key in app.json for both apps
Replaced placeholder variables with actual API key so Expo prebuild correctly injects it into AndroidManifest.xml

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -70,7 +70,7 @@
       "useNextNotificationsApi": true,
       "config": {
         "googleMaps": {
-          "apiKey": "${GOOGLE_MAPS_API_KEY}"
+          "apiKey": "AIzaSyBtetLMBqtW1TNNsBFWi5Xa4LTy1GEbwYw"
         }
       }
     },
