--- a/driver-mobile/android/app/build.gradle
+++ b/driver-mobile/android/app/build.gradle
@@ -87,18 +87,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.qscrapdriver"
+    namespace 'com.qscrapdriver'
     defaultConfig {
-        applicationId "com.qscrapdriver"
+        applicationId 'com.qscrapdriver'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
-
-        // Pass Google Maps API key to manifest
-        manifestPlaceholders = [
-            GOOGLE_MAPS_API_KEY: findProperty('GOOGLE_MAPS_API_KEY') ?: ""
-        ]
+        versionName "1.2.3"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
