--- a/driver-mobile/android/gradle.properties
+++ b/driver-mobile/android/gradle.properties
@@ -60,5 +60,12 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
-# Google Maps API Key for location features
-GOOGLE_MAPS_API_KEY=AIzaSyBtetLMBqtW1TNNsBFWi5Xa4LTy1GEbwYw
+# Specifies whether the app is configured to use edge-to-edge via the app config or plugin
+# WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
+expo.edgeToEdgeEnabled=true
+
+android.minSdkVersion=24
+android.compileSdkVersion=35
+android.targetSdkVersion=35
+android.buildToolsVersion=35.0.0
+android.kotlinVersion=2.1.20
